fixing small spacing problem in footer of PDP

--- a/ProductDetails.css
+++ b/ProductDetails.css
@@ -1158,6 +1158,7 @@ footer{
     margin-bottom: 10px;
     height: 40px;
     width: 300px;
+    margin-top: 1rem;
 }
 .sec3 button{
     /* font-family: 'Spectral'; */
