--- a/ProductDetails_Female.css
+++ b/ProductDetails_Female.css
@@ -1167,6 +1167,7 @@ footer{
     margin-bottom: 10px;
     height: 40px;
     width: 300px;
+    margin-top: 1rem;
 }
 .sec3 button{
     /* font-family: 'Spectral'; */
